[gd_scene load_steps=2 format=3 uid="uid://chmbncpfja5tx"]

[ext_resource type="Script" uid="uid://bsarawajqotoq" path="res://Resources/Character/PlayerHUD.gd" id="1_45er6"]

[node name="PlayerHUD" type="CanvasLayer"]
script = ExtResource("1_45er6")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Levellabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HealthBarContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HealthBarContainer"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer/HealthBarContainer"]
layout_mode = 2

[node name="XPBarContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="XPBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/XPBarContainer"]
layout_mode = 2

[node name="XPLabel" type="Label" parent="MarginContainer/VBoxContainer/XPBarContainer"]
layout_mode = 2
